--- a/install
+++ b/install
@@ -42,6 +42,14 @@ git-fetch() {
 JQ="$(which jq)"
 PACKAGES="$(cat packages.json)"
 
+if [ -e "$JQ" ]; then
+  echo 'Install jq before running'
+  echo 'http://stedolan.github.io/jq/'
+  echo ''
+  echo 'In future installer will fetch it for you, but for now it is only requirement'
+  exit 1
+fi
+
 for path in $($JQ -r '. | keys[]' <<< "$PACKAGES")
 do
   current=$($JQ ".[\"$path\"]" <<< "$PACKAGES")
